lib/src/raft.h

struct bop_raft_rpc_client_ptr;
BOP_API void bop_raft_asio_rpc_client_delete(const struct bop_raft_rpc_client_ptr *rpc_client);
struct bop_raft_params {
    /**
     * Upper bound of election timer, in millisecond.
     */
    int32_t election_timeout_upper_bound;

    /**
     * Lower bound of election timer, in millisecond.
     */
    int32_t election_timeout_lower_bound;

    /**
     * Heartbeat interval, in millisecond.
     */
    int32_t heart_beat_interval;

    /**
     * Backoff time when RPC failure happens, in millisecond.
     */
    int32_t rpc_failure_backoff;

    /**
     * Max number of logs that can be packed in a RPC
     * for catch-up of joining an
     * empty node.
     */
    int32_t log_sync_batch_size;

    /**
     * Log gap (the number of logs) to stop catch-up of
     * joining a new node. Once this
     * condition meets,
     * that newly joined node is added to peer list
     * and starts to
     * receive heartbeat from leader.
     *
     * If zero, the new node will be added to the peer
     * list
     * immediately.
     */
    int32_t log_sync_stop_gap;

    /**
     * Log gap (the number of logs) to create a Raft snapshot.
     */
    int32_t snapshot_distance;

    /**
     * (Deprecated).
     */
    int32_t snapshot_block_size;

    /**
     * Timeout(ms) for snapshot_sync_ctx, if a single snapshot syncing request
     *
     * exceeds this, it will be considered as timeout and ctx will be released.
     * 0 means it
     * will be set to the default value
     * `heart_beat_interval_ * response_limit_`.
     */
    int32_t snapshot_sync_ctx_timeout;

    /**
     * Enable randomized snapshot creation which will avoid
     * simultaneous snapshot
     * creation among cluster members.
     * It is achieved by randomizing the distance of the

     * * first snapshot. From the second snapshot, the fixed
     * distance given by
     * snapshot_distance_ will be used.
     */
    bool enable_randomized_snapshot_creation;

    /**
     * Max number of logs that can be packed in a RPC
     * for append entry request.
 */
    int32_t max_append_size;

    /**
     * Minimum number of logs that will be preserved
     * (i.e., protected from log
     * compaction) since the
     * last Raft snapshot.
     */
    int32_t reserved_log_items;

    /**
     * Client request timeout in millisecond.
     */
    int32_t client_req_timeout;

    /**
     * Log gap (compared to the leader's latest log)
     * for treating this node as
     * fresh.
     */
    int32_t fresh_log_gap;

    /**
     * Log gap (compared to the leader's latest log)
     * for treating this node as
     * stale.
     */
    int32_t stale_log_gap;

    /**
     * Custom quorum size for commit.
     * If set to zero, the default quorum size will be
     * used.
     */
    int32_t custom_commit_quorum_size;

    /**
     * Custom quorum size for leader election.
     * If set to zero, the default quorum
     * size will be used.
     */
    int32_t custom_election_quorum_size;

    /**
     * Expiration time of leadership in millisecond.
     * If more than quorum nodes do not
     * respond within
     * this time, the current leader will immediately
     * yield its
     * leadership and become follower.
     * If 0, it is automatically set to `heartbeat * 20`.

     * * If negative number, leadership will never be expired
     * (the same as the original Raft
     * logic).
     */
    int32_t leadership_expiry;

    /**
     * Minimum wait time required for transferring the leadership
     * in millisecond. If
     * this value is non-zero, and the below
     * conditions are met together,
     *   - the
     * elapsed time since this server became a leader
     *     is longer than this number, and
 *
     * - the current leader's priority is not the highest one, and
     *   - all peers are
     * responding, and
     *   - the log gaps of all peers are smaller than `stale_log_gap_`, and

     * *   - `allow_leadership_transfer` of the state machine returns true,
     * then the current
     * leader will transfer its leadership to the peer
     * with the highest priority.
     */
    int32_t leadership_transfer_min_wait_time;

    /**
     * If true, zero-priority member can initiate vote
     * when leader is not elected
     * long time (that can happen
     * only the zero-priority member has the latest log).
     *
     * Once the zero-priority member becomes a leader,
     * it will immediately yield leadership
     * so that other
     * higher priority node can takeover.
     */
    bool allow_temporary_zero_priority_leader;

    /**
     * If true, follower node will forward client request
     * to the current leader.

     * * Otherwise, it will return error to client immediately.
     */
    bool auto_forwarding;

    /**
     * The maximum number of connections for auto forwarding (if enabled).
     */
    int32_t auto_forwarding_max_connections;

    /**
     * If true, creating replication (append_entries) requests will be
     * done by a
     * background thread, instead of doing it in user threads.
     * There can be some delay a
     * little bit, but it improves reducing
     * the lock contention.
     */
    bool use_bg_thread_for_urgent_commit;

    /**
     * If true, a server who is currently receiving snapshot will not be
     * counted in
     * quorum. It is useful when there are only two servers
     * in the cluster. Once the follower
     * is receiving snapshot, the
     * leader cannot make any progress.
     */
    bool exclude_snp_receiver_from_quorum;

    /**
     * If `true` and the size of the cluster is 2, the quorum size
     * will be adjusted
     * to 1 automatically, once one of two nodes
     * becomes offline.
     */
    bool auto_adjust_quorum_for_small_cluster;

    /**
     * Choose the type of lock that will be used by user threads.
     */
    enum bop_raft_params_locking_method_type locking_method_type;

    /**
     * To choose blocking call or asynchronous call.
     */
    enum bop_raft_params_return_method_type return_method;

    /**
     * Wait ms for response after forwarding request to leader.
     * must be larger than
     * client_req_timeout_.
     * If 0, there will be no timeout for auto forwarding.
     */
    int32_t auto_forwarding_req_timeout;

    /**
     * If non-zero, any server whose state machine's commit index is
     * lagging behind
     * the last committed log index will not
     * initiate vote requests for the given amount of
     * time
     * in milliseconds.
     *
     * The purpose of this option is to avoid a server
     * (whose state
     * machine is still catching up with the committed logs and does
     * not
     * contain the latest data yet) being a leader.
     */
    int32_t grace_period_of_lagging_state_machine;

    /**
     * If `true`, the new joiner will be added to cluster config as a `new_joiner`
     *
     * even before syncing all data. The new joiner will not initiate a vote or
     * participate
     * in leader election.
     *
     * Once the log gap becomes smaller than `log_sync_stop_gap_`,
     * the new joiner
     * will be a regular member.
     *
     * The purpose of this featuer is
     * to preserve the new joiner information
     * even after leader re-election, in order to let
     * the new leader continue
     * the sync process without calling `add_srv` again.
     */
    bool use_new_joiner_type;

    /**
     * (Experimental)
     * If `true`, reading snapshot objects will be done by a
     * background thread
     * asynchronously instead of synchronous read by Raft worker threads.

     * * Asynchronous IO will reduce the overall latency of the leader's operations.
     */
    bool use_bg_thread_for_snapshot_io;

    /**
     * (Experimental)
     * If `true`, it will commit a log upon the agreement of all
     * healthy members.
     * In other words, with this option, all healthy members have the log at
     * the
     * moment the leader commits the log. If the number of healthy members is
     *
     * smaller than the regular (or configured custom) quorum size, the leader
     * cannot commit
     * the log.
     *
     * A member becomes "unhealthy" if it does not respond to the leader's

     * * request for a configured time (`response_limit_`).
     */
    bool use_full_consensus_among_healthy_members;

    /**
     * (Experimental)
     * If `true`, the leader will track the commit index of each peers' state machine.
     * It can be used along with `use_full_consensus_among_healthy_members_`
     */
    bool track_peers_sm_commit_idx;

    /**
     * (Experimental)
     * If `true`, users can let the leader append logs parallel with
     * their
     * replication. To implement parallel log appending, users need to make
     *
     * `log_store::append`, `log_store::write_at`, or
     * `log_store::end_of_append_batch` API
     * triggers asynchronous disk writes
     * without blocking the thread. Even while the disk
     * write is in progress,
     * the other read APIs of log store should be able to read the
     * log.
     *
     * The replication and the disk write will be executed in parallel,
     *
     * and users need to call `raft_server::notify_log_append_completion`
     * when the
     * asynchronous disk write is done. Also, users need to properly
     * implement
     * `log_store::last_durable_index` API to return the most recent
     * durable log index. The
     * leader will commit the log based on the
     * result of this API.
     *
     *   - If the
     * disk write is done earlier than the replication,
     *     the commit behavior is the same
     * as the original protocol.
     *
     *   - If the replication is done earlier than the disk
     * write,
     *     the leader will commit the log based on the quorum except
     *     for
     * the leader itself. The leader can apply the log to
     *     the state machine even before
     * completing the disk write
     *     of the log.
     *
     * Note that parallel log
     * appending is available for the leader only,
     * and followers will wait for
     * `notify_log_append_completion` call
     * before returning the response.
     */
    bool parallel_log_appending;

    /**
     * If non-zero, streaming mode is enabled and `append_entries` requests are
     *
     * dispatched instantly without awaiting the response from the prior request.
     *,
     * The
     * count of logs in-flight will be capped by this value, allowing it
     * to function as a
     * throttling mechanism, in conjunction with
     * `max_bytes_in_flight_in_stream_`.
     */
    int32_t max_log_gap_in_stream;

    /**
     * If non-zero, the volume of data in-flight will be restricted to this
     * specified
     * byte limit. This limitation is effective only in streaming mode.
     */
    int64_t max_bytes_in_flight_in_stream;
};
struct bop_raft_params_ptr;
BOP_API struct bop_raft_params *bop_raft_params_make();
BOP_API void bop_raft_params_delete(const struct bop_raft_params *params);
///////////////////////////////////////////////////////////////////////////////////////////////////
/// nuraft::state_machine
///////////////////////////////////////////////////////////////////////////////////////////////////

struct bop_raft_fsm_ptr;