rust/bop-rs/src/bindings.rs

unsafe extern "C" {
    pub fn bop_raft_asio_rpc_client_delete(rpc_client: *const bop_raft_rpc_client_ptr);
}
pub const bop_raft_params_locking_method_type_bop_raft_params_locking_method_single_mutex:
    bop_raft_params_locking_method_type = 0;
pub const bop_raft_params_locking_method_type_bop_raft_params_locking_method_dual_mutex:
    bop_raft_params_locking_method_type = 1;
pub const bop_raft_params_locking_method_type_bop_raft_params_locking_method_dual_rw_mutex:
    bop_raft_params_locking_method_type = 2;
#[doc = "\n nuraft::raft_params\n"]
pub type bop_raft_params_locking_method_type = i32;
pub const bop_raft_params_return_method_type_bop_raft_params_return_method_blocking:
    bop_raft_params_return_method_type = 0;
pub const bop_raft_params_return_method_type_bop_raft_params_return_method_async_handler:
    bop_raft_params_return_method_type = 1;
pub type bop_raft_params_return_method_type = i32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_params {
    #[doc = " Upper bound of election timer, in millisecond."]
    pub election_timeout_upper_bound: i32,
    #[doc = " Lower bound of election timer, in millisecond."]
    pub election_timeout_lower_bound: i32,
    #[doc = " Heartbeat interval, in millisecond."]
    pub heart_beat_interval: i32,
    #[doc = " Backoff time when RPC failure happens, in millisecond."]
    pub rpc_failure_backoff: i32,
    #[doc = " Max number of logs that can be packed in a RPC\n for catch-up of joining an\n empty node."]
    pub log_sync_batch_size: i32,
    #[doc = " Log gap (the number of logs) to stop catch-up of\n joining a new node. Once this\n condition meets,\n that newly joined node is added to peer list\n and starts to\n receive heartbeat from leader.\n\n If zero, the new node will be added to the peer\n list\n immediately."]
    pub log_sync_stop_gap: i32,
    #[doc = " Log gap (the number of logs) to create a Raft snapshot."]
    pub snapshot_distance: i32,
    #[doc = " (Deprecated)."]
    pub snapshot_block_size: i32,
    #[doc = " Timeout(ms) for snapshot_sync_ctx, if a single snapshot syncing request\n\n exceeds this, it will be considered as timeout and ctx will be released.\n 0 means it\n will be set to the default value\n `heart_beat_interval_ * response_limit_`."]
    pub snapshot_sync_ctx_timeout: i32,
    #[doc = " Enable randomized snapshot creation which will avoid\n simultaneous snapshot\n creation among cluster members.\n It is achieved by randomizing the distance of the\n\n * first snapshot. From the second snapshot, the fixed\n distance given by\n snapshot_distance_ will be used."]
    pub enable_randomized_snapshot_creation: bool,
    #[doc = " Max number of logs that can be packed in a RPC\n for append entry request."]
    pub max_append_size: i32,
    #[doc = " Minimum number of logs that will be preserved\n (i.e., protected from log\n compaction) since the\n last Raft snapshot."]
    pub reserved_log_items: i32,
    #[doc = " Client request timeout in millisecond."]
    pub client_req_timeout: i32,
    #[doc = " Log gap (compared to the leader's latest log)\n for treating this node as\n fresh."]
    pub fresh_log_gap: i32,
    #[doc = " Log gap (compared to the leader's latest log)\n for treating this node as\n stale."]
    pub stale_log_gap: i32,
    #[doc = " Custom quorum size for commit.\n If set to zero, the default quorum size will be\n used."]
    pub custom_commit_quorum_size: i32,
    #[doc = " Custom quorum size for leader election.\n If set to zero, the default quorum\n size will be used."]
    pub custom_election_quorum_size: i32,
    #[doc = " Expiration time of leadership in millisecond.\n If more than quorum nodes do not\n respond within\n this time, the current leader will immediately\n yield its\n leadership and become follower.\n If 0, it is automatically set to `heartbeat * 20`.\n\n * If negative number, leadership will never be expired\n (the same as the original Raft\n logic)."]
    pub leadership_expiry: i32,
    #[doc = " Minimum wait time required for transferring the leadership\n in millisecond. If\n this value is non-zero, and the below\n conditions are met together,\n   - the\n elapsed time since this server became a leader\n     is longer than this number, and\n\n - the current leader's priority is not the highest one, and\n   - all peers are\n responding, and\n   - the log gaps of all peers are smaller than `stale_log_gap_`, and\n\n *   - `allow_leadership_transfer` of the state machine returns true,\n then the current\n leader will transfer its leadership to the peer\n with the highest priority."]
    pub leadership_transfer_min_wait_time: i32,
    #[doc = " If true, zero-priority member can initiate vote\n when leader is not elected\n long time (that can happen\n only the zero-priority member has the latest log).\n\n Once the zero-priority member becomes a leader,\n it will immediately yield leadership\n so that other\n higher priority node can takeover."]
    pub allow_temporary_zero_priority_leader: bool,
    #[doc = " If true, follower node will forward client request\n to the current leader.\n\n * Otherwise, it will return error to client immediately."]
    pub auto_forwarding: bool,
    #[doc = " The maximum number of connections for auto forwarding (if enabled)."]
    pub auto_forwarding_max_connections: i32,
    #[doc = " If true, creating replication (append_entries) requests will be\n done by a\n background thread, instead of doing it in user threads.\n There can be some delay a\n little bit, but it improves reducing\n the lock contention."]
    pub use_bg_thread_for_urgent_commit: bool,
    #[doc = " If true, a server who is currently receiving snapshot will not be\n counted in\n quorum. It is useful when there are only two servers\n in the cluster. Once the follower\n is receiving snapshot, the\n leader cannot make any progress."]
    pub exclude_snp_receiver_from_quorum: bool,
    #[doc = " If `true` and the size of the cluster is 2, the quorum size\n will be adjusted\n to 1 automatically, once one of two nodes\n becomes offline."]
    pub auto_adjust_quorum_for_small_cluster: bool,
    #[doc = " Choose the type of lock that will be used by user threads."]
    pub locking_method_type: bop_raft_params_locking_method_type,
    #[doc = " To choose blocking call or asynchronous call."]
    pub return_method: bop_raft_params_return_method_type,
    #[doc = " Wait ms for response after forwarding request to leader.\n must be larger than\n client_req_timeout_.\n If 0, there will be no timeout for auto forwarding."]
    pub auto_forwarding_req_timeout: i32,
    #[doc = " If non-zero, any server whose state machine's commit index is\n lagging behind\n the last committed log index will not\n initiate vote requests for the given amount of\n time\n in milliseconds.\n\n The purpose of this option is to avoid a server\n (whose state\n machine is still catching up with the committed logs and does\n not\n contain the latest data yet) being a leader."]
    pub grace_period_of_lagging_state_machine: i32,
    #[doc = " If `true`, the new joiner will be added to cluster config as a `new_joiner`\n\n even before syncing all data. The new joiner will not initiate a vote or\n participate\n in leader election.\n\n Once the log gap becomes smaller than `log_sync_stop_gap_`,\n the new joiner\n will be a regular member.\n\n The purpose of this featuer is\n to preserve the new joiner information\n even after leader re-election, in order to let\n the new leader continue\n the sync process without calling `add_srv` again."]
    pub use_new_joiner_type: bool,
    #[doc = " (Experimental)\n If `true`, reading snapshot objects will be done by a\n background thread\n asynchronously instead of synchronous read by Raft worker threads.\n\n * Asynchronous IO will reduce the overall latency of the leader's operations."]
    pub use_bg_thread_for_snapshot_io: bool,
    #[doc = " (Experimental)\n If `true`, it will commit a log upon the agreement of all\n healthy members.\n In other words, with this option, all healthy members have the log at\n the\n moment the leader commits the log. If the number of healthy members is\n\n smaller than the regular (or configured custom) quorum size, the leader\n cannot commit\n the log.\n\n A member becomes \"unhealthy\" if it does not respond to the leader's\n\n * request for a configured time (`response_limit_`)."]
    pub use_full_consensus_among_healthy_members: bool,
    #[doc = " (Experimental)\n If `true`, the leader will track the commit index of each peers' state machine.\n It can be used along with `use_full_consensus_among_healthy_members_`"]
    pub track_peers_sm_commit_idx: bool,
    #[doc = " (Experimental)\n If `true`, users can let the leader append logs parallel with\n their\n replication. To implement parallel log appending, users need to make\n\n `log_store::append`, `log_store::write_at`, or\n `log_store::end_of_append_batch` API\n triggers asynchronous disk writes\n without blocking the thread. Even while the disk\n write is in progress,\n the other read APIs of log store should be able to read the\n log.\n\n The replication and the disk write will be executed in parallel,\n\n and users need to call `raft_server::notify_log_append_completion`\n when the\n asynchronous disk write is done. Also, users need to properly\n implement\n `log_store::last_durable_index` API to return the most recent\n durable log index. The\n leader will commit the log based on the\n result of this API.\n\n   - If the\n disk write is done earlier than the replication,\n     the commit behavior is the same\n as the original protocol.\n\n   - If the replication is done earlier than the disk\n write,\n     the leader will commit the log based on the quorum except\n     for\n the leader itself. The leader can apply the log to\n     the state machine even before\n completing the disk write\n     of the log.\n\n Note that parallel log\n appending is available for the leader only,\n and followers will wait for\n `notify_log_append_completion` call\n before returning the response."]
    pub parallel_log_appending: bool,
    #[doc = " If non-zero, streaming mode is enabled and `append_entries` requests are\n\n dispatched instantly without awaiting the response from the prior request.\n,\n The\n count of logs in-flight will be capped by this value, allowing it\n to function as a\n throttling mechanism, in conjunction with\n `max_bytes_in_flight_in_stream_`."]
    pub max_log_gap_in_stream: i32,
    #[doc = " If non-zero, the volume of data in-flight will be restricted to this\n specified\n byte limit. This limitation is effective only in streaming mode."]
    pub max_bytes_in_flight_in_stream: i64,
}
impl Default for bop_raft_params {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_params_ptr {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn bop_raft_params_make() -> *mut bop_raft_params;
}
unsafe extern "C" {
    pub fn bop_raft_params_delete(params: *const bop_raft_params);
}
#[doc = "\n nuraft::state_machine\n"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_fsm_ptr {
    _unused: [u8; 0],
}
